# lanes

./: .lintstagedrc.json  LICENSE  README.md  package.json
.github/workflows/: build.yaml  build.yml  release.yaml  update-release-channel.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AutoHeightTextarea.tsx  Board.tsx  Card.tsx  CreateLane.tsx  CreateTask.tsx  DragLayer.tsx  DraggableTask.tsx  Editable.tsx  Intro.tsx  Lane.tsx  StringInput.tsx  Task.tsx  TextEditor.tsx
src/hooks/: useFrontendEvent.ts
src/io/: io.ts
src/io/md/: decode.test.ts  decode.ts  encode.test.ts  encode.ts
src/io/md/fixtures/: ast.ts  board.md
src/model/: board.ts  lane.ts  task.ts  taskDragAndDrop.ts
src/model/fixture/: board.ts
src/model/viewModels/: getBoardFromViewModel.ts  getIdForNewLaneFromViewModel.ts  getIdForNewTaskFromViewModel.ts  getViewModelFromBoard.ts  index.ts  moveCard.test.ts  moveCard.ts
src/storage/: storage.ts
src/storage/localStorage/: index.ts
src/storage/tauri/: index.ts
src/tauri/: backendEvents.ts  frontendEvents.ts
src/tauri/interactions/: open.ts  save.ts  util.ts
src/theme/: blue.ts  orange.ts  shared.ts  theme.d.ts
src/util/: extractTitleAndNotesFromString.ts  tail.ts
src/util/immutable/: updateInArray.ts
